--- a/readergui.ui
+++ b/readergui.ui
@@ -177,6 +177,12 @@ color: black;</string>
          <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0">
           <item>
            <widget class="QLabel" name="biaSach">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
               <width>150</width>
@@ -185,12 +191,15 @@ color: black;</string>
             </property>
             <property name="maximumSize">
              <size>
-              <width>16777215</width>
+              <width>128</width>
               <height>200</height>
              </size>
             </property>
             <property name="text">
              <string/>
+            </property>
+            <property name="scaledContents">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
