--- a/introform.ui
+++ b/introform.ui
@@ -70,6 +70,9 @@
              <property name="text">
               <string>Đăng nhập</string>
              </property>
+             <property name="default">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
           </layout>
