--- a/readergui.ui
+++ b/readergui.ui
@@ -64,6 +64,13 @@ color: white;</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
+          <widget class="QLabel" name="avatarIcon">
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="username">
            <property name="styleSheet">
             <string notr="true">color: white;</string>
