--- a/introform.ui
+++ b/introform.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>IntroForm</class>
  <widget class="QWidget" name="IntroForm">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
