--- a/information.ui
+++ b/information.ui
@@ -421,7 +421,11 @@
         </widget>
        </item>
        <item>
-        <widget class="QTableView" name="sachDaMuon"/>
+        <widget class="QTableView" name="sachDaMuon">
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
