--- a/resources.qrc
+++ b/resources.qrc
@@ -4,5 +4,18 @@
         <file>media/images/logo.png</file>
         <file>media/icons/search_bar.png</file>
         <file>media/images/default.png</file>
+        <file>media/icons/book.png</file>
+        <file>media/icons/book-1.png</file>
+        <file>media/icons/bookmark.png</file>
+        <file>media/icons/books.png</file>
+        <file>media/icons/compass.png</file>
+        <file>media/icons/diploma.png</file>
+        <file>media/icons/erase.png</file>
+        <file>media/icons/formula.png</file>
+        <file>media/icons/notepad.png</file>
+        <file>media/icons/pipette.png</file>
+        <file>media/icons/projection.png</file>
+        <file>media/icons/quill.png</file>
+        <file>media/icons/student-hat.png</file>
     </qresource>
 </RCC>
