--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -651,145 +651,130 @@ color: black;</string>
          <attribute name="label">
           <string>Yêu cầu mượn sách</string>
          </attribute>
-         <layout class="QVBoxLayout" name="verticalLayout_8">
+         <layout class="QVBoxLayout" name="verticalLayout_6">
           <item>
-           <widget class="QTabWidget" name="tabWidget">
-            <property name="styleSheet">
-             <string notr="true">color: black;</string>
-            </property>
-            <property name="currentIndex">
-             <number>3</number>
-            </property>
-            <widget class="QWidget" name="tab_4">
-             <attribute name="title">
-              <string>Yêu cầu mượn sách</string>
-             </attribute>
-             <layout class="QVBoxLayout" name="verticalLayout_12">
+           <layout class="QHBoxLayout" name="horizontalLayout_8">
+            <item>
+             <layout class="QVBoxLayout" name="verticalLayout_5">
               <item>
-               <layout class="QVBoxLayout" name="verticalLayout_4">
+               <layout class="QHBoxLayout" name="horizontalLayout">
                 <item>
-                 <widget class="QTableView" name="yeuCauMuonSach">
-                  <property name="styleSheet">
-                   <string notr="true">background: white;</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <layout class="QHBoxLayout" name="horizontalLayout_11">
-                  <item>
-                   <widget class="QPushButton" name="chapThuanButton">
-                    <property name="text">
-                     <string>Chấp thuận</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QPushButton" name="tuChoiButton">
-                    <property name="text">
-                     <string>Từ chối</string>
-                    </property>
-                   </widget>
-                  </item>
-                 </layout>
-                </item>
-               </layout>
-              </item>
-             </layout>
-            </widget>
-            <widget class="QWidget" name="tab">
-             <attribute name="title">
-              <string>Sách đang mượn</string>
-             </attribute>
-             <layout class="QVBoxLayout" name="verticalLayout_16">
-              <item>
-               <layout class="QVBoxLayout" name="verticalLayout_15">
-                <item>
-                 <widget class="QTableView" name="sachDangMuon">
-                  <property name="styleSheet">
-                   <string notr="true">background: white;</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QPushButton" name="xacNhanSachDaTraButton">
+                 <widget class="QCheckBox" name="muonSachCheckbox">
                   <property name="text">
-                   <string>Xác nhận sách đã trả</string>
+                   <string>Mượn sách</string>
                   </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-             </layout>
-            </widget>
-            <widget class="QWidget" name="tab_5">
-             <attribute name="title">
-              <string>Sách quá hạn</string>
-             </attribute>
-             <layout class="QVBoxLayout" name="verticalLayout_13">
-              <item>
-               <layout class="QVBoxLayout" name="verticalLayout_5">
-                <item>
-                 <widget class="QTableView" name="sachQuaHan">
-                  <property name="styleSheet">
-                   <string notr="true">background: white;</string>
+                  <property name="checked">
+                   <bool>true</bool>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <layout class="QHBoxLayout" name="horizontalLayout_12">
-                  <item>
-                   <widget class="QPushButton" name="phatButton">
-                    <property name="text">
-                     <string>Phạt</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QPushButton" name="canhCaoButton">
-                    <property name="text">
-                     <string>Cảnh cáo</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QPushButton" name="nhacNhoButton">
-                    <property name="text">
-                     <string>Nhắc nhở</string>
-                    </property>
-                   </widget>
-                  </item>
-                 </layout>
-                </item>
-               </layout>
-              </item>
-             </layout>
-            </widget>
-            <widget class="QWidget" name="tab_6">
-             <attribute name="title">
-              <string>Sách bị mất</string>
-             </attribute>
-             <layout class="QVBoxLayout" name="verticalLayout_14">
-              <item>
-               <layout class="QVBoxLayout" name="verticalLayout_6">
-                <item>
-                 <widget class="QTableView" name="sachBiMat">
-                  <property name="styleSheet">
-                   <string notr="true">background: white;</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QPushButton" name="phatButton2">
+                 <widget class="QCheckBox" name="sachDangMuonCheckbox">
                   <property name="text">
-                   <string>Phạt</string>
+                   <string>Sách đang mượn</string>
+                  </property>
+                  <property name="checked">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QCheckBox" name="quaHanCheckbox">
+                  <property name="text">
+                   <string>Quá hạn</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QCheckBox" name="matSachCheckbox">
+                  <property name="text">
+                   <string>Mất sách</string>
+                  </property>
+                  <property name="checked">
+                   <bool>true</bool>
                   </property>
                  </widget>
                 </item>
                </layout>
               </item>
+              <item>
+               <widget class="QTableView" name="yeuCau">
+                <property name="styleSheet">
+                 <string notr="true">background: white;
+color: black;</string>
+                </property>
+                <attribute name="horizontalHeaderStretchLastSection">
+                 <bool>true</bool>
+                </attribute>
+               </widget>
+              </item>
              </layout>
-            </widget>
-           </widget>
+            </item>
+            <item>
+             <layout class="QVBoxLayout" name="verticalLayout_4">
+              <item>
+               <widget class="QPushButton" name="chapThuanButton">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="text">
+                 <string>Chấp thuận</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="tuChoiButton">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="text">
+                 <string>Từ chối</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="phatButton">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="text">
+                 <string>Phạt</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="canhCaoButton">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="text">
+                 <string>Cảnh cáo</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="nhacNhoButton">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="text">
+                 <string>Nhắc nhở</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="xacNhanSachDaTraButton">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="text">
+                 <string>Xác nhận sách đã trả</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+           </layout>
           </item>
          </layout>
         </widget>
