--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,8 +18,10 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="styleSheet">
-    <string notr="true">background-color: #343a40;
-color: white;</string>
+    <string notr="true">#centralwidget {
+background-color: #343a40;
+color: white;
+}</string>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_10">
     <item>
@@ -41,6 +43,11 @@ color: white;</string>
               <font>
                <pointsize>12</pointsize>
               </font>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">#quotesLabel {
+	color: white;
+}</string>
              </property>
              <property name="text">
               <string/>
@@ -103,7 +110,7 @@ color: white;</string>
            <item>
             <widget class="QFrame" name="dangFrame">
              <property name="styleSheet">
-              <string notr="true">color: white;</string>
+              <string notr="true"/>
              </property>
              <property name="frameShape">
               <enum>QFrame::StyledPanel</enum>
@@ -174,7 +181,9 @@ color: white;</string>
          <bool>true</bool>
         </property>
         <property name="styleSheet">
-         <string notr="true">background:#495057;</string>
+         <string notr="true">#toolBox {
+	color: white;
+}</string>
         </property>
         <property name="currentIndex">
          <number>1</number>
@@ -202,8 +211,7 @@ color: white;</string>
           <item>
            <widget class="QFrame" name="hienThiSach">
             <property name="styleSheet">
-             <string notr="true">background-color: white;
-color: black;</string>
+             <string notr="true"/>
             </property>
             <property name="frameShape">
              <enum>QFrame::NoFrame</enum>
@@ -212,6 +220,30 @@ color: black;</string>
              <enum>QFrame::Sunken</enum>
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout_7">
+             <item>
+              <layout class="QVBoxLayout" name="verticalLayout_8">
+               <item>
+                <widget class="QPushButton" name="muonButton">
+                 <property name="toolTip">
+                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Mượn các sách đã chọn&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true"/>
+                 </property>
+                 <property name="text">
+                  <string>Mượn</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="themSachButton">
+                 <property name="text">
+                  <string>Thêm sách</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
              <item>
               <widget class="QFrame" name="biaSachFrame">
                <property name="minimumSize">
@@ -229,7 +261,7 @@ color: black;</string>
                <property name="frameShadow">
                 <enum>QFrame::Raised</enum>
                </property>
-               <layout class="QVBoxLayout" name="verticalLayout_7" stretch="0,0,0,0">
+               <layout class="QVBoxLayout" name="verticalLayout_7" stretch="0,0">
                 <item>
                  <widget class="QLabel" name="biaSach">
                   <property name="sizePolicy">
@@ -259,29 +291,12 @@ color: black;</string>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="muonButton">
-                  <property name="styleSheet">
-                   <string notr="true"/>
-                  </property>
-                  <property name="text">
-                   <string>Mượn</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
                  <widget class="QPushButton" name="thayDoiSachButton">
                   <property name="enabled">
                    <bool>true</bool>
                   </property>
                   <property name="text">
                    <string>Thay đổi</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QPushButton" name="themSachButton">
-                  <property name="text">
-                   <string>Thêm sách</string>
                   </property>
                  </widget>
                 </item>
@@ -657,55 +672,102 @@ color: black;</string>
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_5">
               <item>
-               <layout class="QHBoxLayout" name="horizontalLayout">
-                <item>
-                 <widget class="QCheckBox" name="muonSachCheckbox">
-                  <property name="text">
-                   <string>Mượn sách</string>
-                  </property>
-                  <property name="checked">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QCheckBox" name="sachDangMuonCheckbox">
-                  <property name="text">
-                   <string>Sách đang mượn</string>
-                  </property>
-                  <property name="checked">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QCheckBox" name="quaHanCheckbox">
-                  <property name="text">
-                   <string>Quá hạn</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QCheckBox" name="matSachCheckbox">
-                  <property name="text">
-                   <string>Mất sách</string>
-                  </property>
-                  <property name="checked">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
+               <layout class="QHBoxLayout" name="horizontalLayout"/>
               </item>
               <item>
-               <widget class="QTableView" name="yeuCau">
-                <property name="styleSheet">
-                 <string notr="true">background: white;
-color: black;</string>
+               <widget class="QTabWidget" name="tabWidget">
+                <property name="currentIndex">
+                 <number>1</number>
                 </property>
-                <attribute name="horizontalHeaderStretchLastSection">
-                 <bool>true</bool>
-                </attribute>
+                <widget class="QWidget" name="muonSach">
+                 <attribute name="title">
+                  <string>Yêu cầu mượn sách</string>
+                 </attribute>
+                 <layout class="QVBoxLayout" name="verticalLayout_13">
+                  <item>
+                   <widget class="QTableView" name="muonSachTable">
+                    <property name="styleSheet">
+                     <string notr="true">background: white;
+color: black;</string>
+                    </property>
+                    <property name="sortingEnabled">
+                     <bool>true</bool>
+                    </property>
+                    <attribute name="horizontalHeaderStretchLastSection">
+                     <bool>true</bool>
+                    </attribute>
+                   </widget>
+                  </item>
+                 </layout>
+                </widget>
+                <widget class="QWidget" name="dangMuon">
+                 <attribute name="title">
+                  <string>Sách đang mượn</string>
+                 </attribute>
+                 <layout class="QVBoxLayout" name="verticalLayout_14">
+                  <item>
+                   <layout class="QVBoxLayout" name="verticalLayout_12">
+                    <item>
+                     <layout class="QHBoxLayout" name="horizontalLayout_11">
+                      <item>
+                       <widget class="QLabel" name="hanNopLabel">
+                        <property name="text">
+                         <string>Loại:</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QComboBox" name="hanNop">
+                        <property name="sizePolicy">
+                         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                          <horstretch>0</horstretch>
+                          <verstretch>0</verstretch>
+                         </sizepolicy>
+                        </property>
+                        <item>
+                         <property name="text">
+                          <string>Trong kỳ hạn</string>
+                         </property>
+                        </item>
+                        <item>
+                         <property name="text">
+                          <string>Quá hạn</string>
+                         </property>
+                        </item>
+                       </widget>
+                      </item>
+                      <item>
+                       <spacer name="horizontalSpacer">
+                        <property name="orientation">
+                         <enum>Qt::Horizontal</enum>
+                        </property>
+                        <property name="sizeHint" stdset="0">
+                         <size>
+                          <width>40</width>
+                          <height>20</height>
+                         </size>
+                        </property>
+                       </spacer>
+                      </item>
+                     </layout>
+                    </item>
+                    <item>
+                     <widget class="QTableView" name="dangMuonTable"/>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
+                </widget>
+                <widget class="QWidget" name="matSach">
+                 <attribute name="title">
+                  <string>Sách bị mất</string>
+                 </attribute>
+                 <layout class="QVBoxLayout" name="verticalLayout_15">
+                  <item>
+                   <widget class="QTableView" name="matSachTable"/>
+                  </item>
+                 </layout>
+                </widget>
                </widget>
               </item>
              </layout>
@@ -717,6 +779,9 @@ color: black;</string>
                 <property name="enabled">
                  <bool>false</bool>
                 </property>
+                <property name="styleSheet">
+                 <string notr="true"/>
+                </property>
                 <property name="text">
                  <string>Chấp thuận</string>
                 </property>
@@ -726,6 +791,9 @@ color: black;</string>
                <widget class="QPushButton" name="tuChoiButton">
                 <property name="enabled">
                  <bool>false</bool>
+                </property>
+                <property name="styleSheet">
+                 <string notr="true"/>
                 </property>
                 <property name="text">
                  <string>Từ chối</string>
@@ -737,28 +805,11 @@ color: black;</string>
                 <property name="enabled">
                  <bool>false</bool>
                 </property>
+                <property name="styleSheet">
+                 <string notr="true"/>
+                </property>
                 <property name="text">
                  <string>Phạt</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QPushButton" name="canhCaoButton">
-                <property name="enabled">
-                 <bool>false</bool>
-                </property>
-                <property name="text">
-                 <string>Cảnh cáo</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QPushButton" name="nhacNhoButton">
-                <property name="enabled">
-                 <bool>false</bool>
-                </property>
-                <property name="text">
-                 <string>Nhắc nhở</string>
                 </property>
                </widget>
               </item>
@@ -766,6 +817,9 @@ color: black;</string>
                <widget class="QPushButton" name="xacNhanSachDaTraButton">
                 <property name="enabled">
                  <bool>false</bool>
+                </property>
+                <property name="styleSheet">
+                 <string notr="true"/>
                 </property>
                 <property name="text">
                  <string>Xác nhận sách đã trả</string>
@@ -813,13 +867,6 @@ color: black;</string>
      <height>26</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuAbout">
-    <property name="title">
-     <string>About</string>
-    </property>
-    <addaction name="actionAbout_LIBPRO"/>
-   </widget>
-   <addaction name="menuAbout"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionAbout_LIBPRO">
